fix desktop alignment issues

--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -1,19 +1,4 @@
-.desktop.svelte-1e31h6m{background-image:linear-gradient(
-        45deg,
-        var(--primary) 25%,
-        transparent 25%,
-        transparent 75%,
-        var(--primary) 75%,
-        var(--primary)
-      ),
-      linear-gradient(
-        45deg,
-        var(--primary) 25%,
-        transparent 25%,
-        transparent 75%,
-        var(--primary) 75%,
-        var(--primary)
-      );background-size:4px 4px;background-position:0 0, 2px 2px}.window.svelte-3ct6ft.svelte-3ct6ft{z-index:5;margin:1rem;max-width:20rem;background:var(--alt);border-style:solid;border:2px solid var(--primary);box-shadow:2px 2px 0 0 var(--primary)}.window-header.svelte-3ct6ft.svelte-3ct6ft{display:flex;flex-direction:row;padding:0.375rem 0.25rem;width:100%;border-bottom:2px solid var(--primary);background-color:var(--alt);background-image:linear-gradient(
+.window.svelte-3ct6ft.svelte-3ct6ft{z-index:5;margin:1rem;max-width:20rem;background:var(--alt);border-style:solid;border:2px solid var(--primary);box-shadow:2px 2px 0 0 var(--primary)}.window-header.svelte-3ct6ft.svelte-3ct6ft{display:flex;flex-direction:row;padding:0.375rem 0.25rem;width:100%;border-bottom:2px solid var(--primary);background-color:var(--alt);background-image:linear-gradient(
       var(--primary) 0.125rem,
       transparent 0.125rem
     );background-size:100% 0.375rem;background-position:0 1.25rem;background-clip:content-box}.window-close.svelte-3ct6ft.svelte-3ct6ft{flex:0 0 auto;border-radius:0;border:2px solid var(--primary);height:1.5rem;width:1.5rem;line-height:0;margin:0 0.5rem 0 0.25rem;background:var(--alt);box-shadow:0.25rem 0 0 0.25rem var(--alt), -0.25rem 0 0 0.25rem var(--alt);font-size:0}.window-title.svelte-3ct6ft.svelte-3ct6ft{flex:1 1 100%;display:flex;padding-right:2rem;flex-direction:row;align-items:center;justify-content:center}.window-title.svelte-3ct6ft h2.svelte-3ct6ft{flex:0 1 auto;background:var(--alt);padding:0 0.75rem;font-size:1.25rem}.window-main.svelte-3ct6ft.svelte-3ct6ft{padding:1rem}
